🔧 Revert "🔧 helm-charts: Update minio-operator: disable ingress"
This reverts commit 3c054f84189dd04a9494afa593e85795db980a2e.

--- a/helm-charts/minio-operator/values.yaml
+++ b/helm-charts/minio-operator/values.yaml
@@ -281,7 +281,7 @@ console:
   #
   # Set the keys to conform to the Ingress controller and configuration of your choice.
   ingress:
-    enabled: false
+    enabled: true
     ingressClassName: nginx
     labels: { }
     annotations:
