--- a/apps/open-webui.yaml
+++ b/apps/open-webui.yaml
@@ -15,11 +15,19 @@ spec:
           class: "nginx"
           annotations:
             cert-manager.io/cluster-issuer: letsencrypt-prod
+            nginx.ingress.kubernetes.io/configuration-snippet: |
+              more_set_headers "Access-Control-Allow-Origin: $http_origin";
+            nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
+            nginx.ingress.kubernetes.io/cors-allow-headers: X-Api-Key
+            nginx.ingress.kubernetes.io/cors-allow-methods: HEAD
+            nginx.ingress.kubernetes.io/enable-cors: "true"
           host: ollama.app.jyje.live
           tls: true
           existingSecret: ollama-letsencrypt-tls
         persistence:
           enabled: true
+        ollamaUrls:
+          - http://ollama.ollama.svc.cluster.local:11434
   destination:
     namespace: ollama
     server: 'https://kubernetes.default.svc'
